2006-06-27  Bruno Haible  <bruno@clisp.org>

	Assume correct S_ISDIR macro.
	* mkdtemp.c: Remove test of STAT_MACROS_BROKEN.
	* tmpdir.c: Remove test of STAT_MACROS_BROKEN.

2006-06-27  Bruno Haible  <bruno@clisp.org>

	Assume ANSI C header files and <ctype.h> functions.
	* fnmatch.c (ISASCII): Remove macro.
	(isblank): Renamed from ISBLANK.
	(isgraph): Renamed from isgraph.
	(ISPRINT, ISDIGIT, ISALNUM, ISALPHA, ISCNTRL, ISLOWER, ISPUNCT,
	ISSPACE, ISUPPER, ISXDIGIT): Remove macros.
	(FOLD): Update.
	* fnmatch_loop.c (FCT): Update.
	* getndelim2.c: Include <stdlib.h> always.
	* mbswidth.c (IN_CTYPE_DOMAIN, ISPRINT, ISCNTRL): Remove macros.
	(mbsnwidth): Use isprint, iscntrl instead.
	* strtol.c (IN_CTYPE_DOMAIN): Remove macro.
	(ISSPACE, ISALPHA, TOUPPER): Use isspace, isalpha, toupper directly.

2006-06-28  Bruno Haible  <bruno@clisp.org>

        * xvasprintf.h: Update from gnulib.

2006-04-14  Bruno Haible  <bruno@clisp.org>

	Assume autoconf >= 2.60.
	* Makefile.am (docdir): Remove variable.

2006-06-21  Bruno Haible  <bruno@clisp.org>

	Avoid warnings from recent versions of mcs.
	* csharpcomp.sh.in (options_mcs): Don't use options -o, -L, -r any
	more. Use options documented since mcs-1.0 instead. Similarly for -g.
	* csharpcomp.c (compile_csharp_using_mono): Likewise.

2006-06-17  Bruno Haible  <bruno@clisp.org>

	* iconvstring.c (UNSAFE_ICONV): New macro.
	(iconv_string): Add slower but safer code for UNSAFE_ICONV.
	Needed for IRIX iconv() and NetBSD's iconv().

2006-06-17  Bruno Haible  <bruno@clisp.org>

	* iconvstring.c (iconv_string): Recognize conversion failures also
	from NetBSD's iconv().

2006-06-17  Bruno Haible  <bruno@clisp.org>

	* config.charset: Update for NetBSD 3.0.

2006-06-17  Bruno Haible  <bruno@clisp.org>

	* xgetcwd.c: Assume errno.h declares errno.
	* xreadlink.c: Likewise.

2006-06-16  Eric Blake  <ebb9@byu.net>

	* unsetenv.c [!defined errno]: Assume errno.h declares errno.
	* strtol.c [!defined errno]: Likewise.
